# tauri-plugin-litert

./: .gitignore  Cargo.toml  README.md  build.rs
.github/workflows/: publish.yml
.ona/: automations.yaml
android/: build.gradle  proguard-rules.pro
android/src/main/: AndroidManifest.xml
android/src/main/java/com/plugin/litert/: LiteRtLmPlugin.kt  LiteRtPlugin.kt
examples/web-chat/: index.html  package-lock.json  package.json  vite.config.ts
examples/web-chat/src/: App.css  App.tsx  embeddings.ts  llm.ts  rag.ts  store.ts  useChat.ts
guest-js/: package.json
guest-js/src/: index.ts
ios/: Package.swift  README.md
ios/Sources/: LiteRtPlugin.swift
permissions/: default.toml
permissions/autogenerated/: reference.md
permissions/autogenerated/commands/: create_embedding.toml  generate.toml  generate_stream.toml  get_model_info.toml  list_lm_models.toml  load_lm_model.toml  run_inference.toml  tts_cancel.toml  unload_lm_model.toml
permissions/schemas/: schema.json
src/: commands.rs  desktop.rs  desktop_lm.rs  error.rs  lib.rs  lm_commands.rs  lm_models.rs  mobile.rs  mobile_lm.rs  models.rs
