[package]
name = "tauri-plugin-litert"
version = "0.1.0"
edition = "2021"
description = "Tauri plugin for Google LiteRT on-device ML inference"
license = "Apache-2.0"
repository = "https://github.com/ldoguin/tauri-plugin-litert"
keywords = ["tauri", "litert", "tflite", "ml", "inference"]
categories = ["api-bindings"]
# Required by tauri-plugin build infrastructure
links = "tauri-plugin-litert"

[lib]
name = "tauri_plugin_litert"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-plugin = { version = "2", features = ["build"] }

[dependencies]
tauri = { version = "2", default-features = false }
tauri-plugin = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
log = "0.4"

# Desktop: LiteRT 2.x Rust bindings (downloads prebuilt libLiteRt automatically).
# Excluded from Android (handled by Kotlin) and iOS (no upstream prebuilt yet).
[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
litert   = { version = "0.2", optional = true }
litertlm = { version = "0.2", optional = true }

[features]
default = ["desktop"]
desktop = ["litert", "litertlm"]

[package.metadata.docs.rs]
features = ["desktop"]
